--- a/AssignmentOS/kernel/Makefile
+++ b/AssignmentOS/kernel/Makefile
@@ -5,13 +5,13 @@ NASM=nasm
 NASMFLAGS=-f elf
 
 C_SOURCES=*.c
-SRC_DIRS=boot interrupts mm drivers scheduler utils
+SRC_DIRS=boot interrupts mm drivers scheduler utils programs
 
 kernel.gz: kernel.bin
 	gzip -c -9 $^ > $@
 
 kernel.bin: main.o shell.o programs.o link.ld submodules
-	$(CC) *.o */*.o -o $@ $(LINKFLAGS)
+	$(CC) $$(find . -name '*.o' | grep -v '^\./programs/') -o $@ $(LINKFLAGS)
 
 submodules:
 	for dir in $(SRC_DIRS); do\
@@ -48,6 +48,7 @@ depend:
 
 install: kernel.gz
 	cp $^ $(PREFIX)/boot
+	cd programs; make install; cd ..;
 	sync
 
 clean:
@@ -55,7 +56,8 @@ clean:
 	-rm -rf *.o
 	-rm -rf *.bin
 	-rm -rf *.gz
+	cd programs; make clean; cd ..;
 
-main.o: main.c include/kernel.h include/tty.h include/constants.h  include/scheduler.h include/syscalls.h include/kernel.h include/timer.h  include/interrupts.h include/keyboard.h include/utils.h include/mm.h  include/tty.h include/syscalls.h
-shell.o: shell.c include/tty.h include/constants.h include/mm.h  include/kernel.h include/tty.h include/utils.h include/scheduler.h  include/syscalls.h sys.h
-programs.o: programs.c include/tty.h include/constants.h include/utils.h  include/scheduler.h include/syscalls.h include/kernel.h include/tty.h  include/timer.h sys.h
+main.o: main.c include/kernel.h include/tty.h include/constants.h  include/scheduler.h include/syscalls.h include/kernel.h include/timer.h  include/interrupts.h include/keyboard.h include/utils.h include/mm.h  include/tty.h include/syscalls.h include/floppy.h
+shell.o: shell.c include/tty.h include/constants.h include/mm.h  include/kernel.h include/tty.h include/utils.h include/scheduler.h  include/syscalls.h include/sys.h include/fs.h
+programs.o: programs.c include/tty.h include/constants.h include/utils.h  include/scheduler.h include/syscalls.h include/kernel.h include/tty.h  include/timer.h include/sys.h include/fs.h
