--- a/AssignmentOS/kernel/drivers/Makefile
+++ b/AssignmentOS/kernel/drivers/Makefile
@@ -5,7 +5,7 @@ NASMFLAGS=-f elf
 
 C_SOURCES=*.c
 
-all: tty.o keyboard_map.o
+all: tty.o keyboard_map.o floppy.o fat12.o fs.o
 
 depend:
 	$(CC) $(C_SOURCES) -MM $(CFLAGS) | while read row; do\
@@ -26,3 +26,6 @@ depend:
 
 keyboard_map.o: keyboard_map.c ../include/keyboard_map.h
 tty.o: tty.c ../include/constants.h ../include/tty.h  ../include/constants.h ../include/keyboard.h ../include/keyboard_map.h  ../include/scheduler.h ../include/syscalls.h ../include/kernel.h  ../include/tty.h ../include/interrupts.h ../include/keyboard.h  ../include/utils.h
+floppy.o: floppy.c ../include/scheduler.h ../include/constants.h  ../include/syscalls.h ../include/kernel.h ../include/tty.h  ../include/constants.h ../include/interrupts.h ../include/keyboard.h  ../include/floppy.h ../include/utils.h
+fat12.o: fat12.c ../include/fs.h ../include/floppy.h  ../include/scheduler.h ../include/constants.h ../include/syscalls.h  ../include/kernel.h ../include/tty.h ../include/utils.h ../include/mm.h
+fs.o: fs.c ../include/fs.h ../include/utils.h
